k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-service
  name: my-service
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: my-service
  type: ClusterIP
